chore: unify authentication, storage objects, annotation creation